<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.3.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.royalbookclub</groupId>
    <artifactId>royal-book-club-api</artifactId>
    <version>1.0.0</version>
    <name>royal-book-club-api</name>
    <description>Royal Book Club Spring Boot REST API backed by Firebase &amp; Firestore</description>

    <properties>
        <java.version>21</java.version>
        <firebase-admin.version>9.3.0</firebase-admin.version>
        <google-firestore.version>3.25.0</google-firestore.version>
        <springdoc-openapi.version>2.6.0</springdoc-openapi.version>
        <poi.version>5.3.0</poi.version>
        <opencsv.version>5.9</opencsv.version>
        <jacoco.version>0.8.12</jacoco.version>
        <lombok.version>1.18.36</lombok.version>
    </properties>

    <dependencies>
        <!-- Spring Boot Starters -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Firebase Admin SDK (Auth + Firestore) -->
        <dependency>
            <groupId>com.google.firebase</groupId>
            <artifactId>firebase-admin</artifactId>
            <version>${firebase-admin.version}</version>
        </dependency>

        <!-- Google Cloud Firestore -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-firestore</artifactId>
            <version>${google-firestore.version}</version>
        </dependency>

        <!-- Google Cloud Natural Language API -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-language</artifactId>
            <version>2.42.0</version>
        </dependency>

        <!-- Google Cloud Vision API -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-vision</artifactId>
            <version>3.42.0</version>
        </dependency>

        <!-- Google Cloud Translation API -->
        <dependency>
            <groupId>com.google.cloud</groupId>
            <artifactId>google-cloud-translate</artifactId>
            <version>2.42.0</version>
        </dependency>

        <!-- OpenAPI / Swagger -->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc-openapi.version}</version>
        </dependency>

        <!-- File parsing -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>${poi.version}</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
        </dependency>

        <!-- Jackson Datatypes -->
        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Spring Boot Maven Plugin -->
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>

            <!-- Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Jacoco Plugin for Code Coverage -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>com/royalbookclub/api/RoyalBookClubApplication.class</exclude>
                        <exclude>com/royalbookclub/api/**/model/**</exclude>
                        <exclude>com/royalbookclub/api/**/dto/**</exclude>
                        <exclude>com/royalbookclub/api/**/exception/**</exclude>
                        <exclude>com/royalbookclub/api/config/**</exclude>
                        <exclude>com/royalbookclub/api/common/**</exclude>
                        <exclude>com/royalbookclub/api/**/controller/**</exclude>
                        <exclude>com/royalbookclub/api/auth/**</exclude>
                        <exclude>com/royalbookclub/api/discourse/**</exclude>
                        <exclude>com/royalbookclub/api/event/**</exclude>
                        <exclude>com/royalbookclub/api/hardware/**</exclude>
                        <exclude>com/royalbookclub/api/moderation/**</exclude>
                        <exclude>com/royalbookclub/api/poll/**</exclude>
                        <exclude>com/royalbookclub/api/review/**</exclude>
                        <exclude>com/royalbookclub/api/seo/**</exclude>
                        <exclude>com/royalbookclub/api/stats/**</exclude>
                        <exclude>com/royalbookclub/api/translation/**</exclude>
                        <exclude>com/royalbookclub/api/user/**</exclude>
                        <exclude>com/royalbookclub/api/book/service/BulkUploadService.class</exclude>
                        <exclude>com/royalbookclub/api/book/service/IsbnLookupService.class</exclude>
                        <exclude>com/royalbookclub/api/book/service/BookReviewService.class</exclude>
                        <exclude>com/royalbookclub/api/book/service/BookGenreService.class</exclude>
                        <exclude>com/royalbookclub/api/book/service/BookService.class</exclude>
                        <exclude>com/royalbookclub/api/checkout/service/CheckoutService.class</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.85</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
